# IG_Sorter

./: .gitignore  .gitmodules  CODING_STANDARDS.md  Find_Duplicate_Files.py  IG_CleanupScreen.cpp  IG_PreviewGrid.cpp  IMPLEMENTATION_PLAN.md  Instagram_Sorter.py  README.md  agents.md  architecture.md  boys.csv  changelog.md  ig_boys.csv  instaloader_downloader.py  migrate_database.py  names.csv  photographers.txt  run_IG_Sorter.bat  run_sorter.bat
IG_Sorter_Qt/: CMakeLists.txt
IG_Sorter_Qt/resources/: resources.qrc
IG_Sorter_Qt/resources/styles/: dark.qss  light.qss
IG_Sorter_Qt/src/: main.cpp
IG_Sorter_Qt/src/core/: DatabaseManager.cpp  DatabaseManager.h  DirectoryCleanup.cpp  DirectoryCleanup.h  DuplicateFinder.cpp  DuplicateFinder.h  ExtensionFixer.cpp  ExtensionFixer.h  FileGrouper.cpp  FileGrouper.h  FileNameParser.cpp  FileNameParser.h  SorterEngine.cpp  SorterEngine.h  Types.h
IG_Sorter_Qt/src/ui/: AddPersonDialog.cpp  AddPersonDialog.h  CleanUpAccountsScreen.cpp  CleanUpAccountsScreen.h  CleanupScreen.cpp  CleanupScreen.h  DuplicateFinderScreen.cpp  DuplicateFinderScreen.h  FlowLayout.cpp  FlowLayout.h  IG_PreviewGrid.cpp  ImagePreviewGrid.cpp  ImagePreviewGrid.h  ImageThumbnail.cpp  ImageThumbnail.h  MainWindow.cpp  MainWindow.h  MenuScreen.cpp  MenuScreen.h  ReportScreen.cpp  ReportScreen.h  SettingsDialog.cpp  SettingsDialog.h  SortPanel.cpp  SortPanel.h  SortingScreen.cpp  SortingScreen.h  ThumbnailWithLabel.cpp  ThumbnailWithLabel.h
IG_Sorter_Qt/src/utils/: ConfigManager.cpp  ConfigManager.h  FileUtils.cpp  FileUtils.h  LogManager.cpp  LogManager.h  ThemeManager.cpp  ThemeManager.h  WebpDecoder.cpp  WebpDecoder.h
